--- a/Libs/FFMpegLib/FFmpeg.AutoGen.Abstractions/FFmpeg.AutoGen.Abstractions.csproj
+++ b/Libs/FFMpegLib/FFmpeg.AutoGen.Abstractions/FFmpeg.AutoGen.Abstractions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
 	<LangVersion>latest</LangVersion>
     <Description>
       FFmpeg auto generated unsafe bindings for C#/.NET and Mono. An abstraction API has been created specifically for use in .NET MAUI scenarios.
@@ -25,7 +25,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
